--- a/index.html
+++ b/index.html
@@ -36,32 +36,38 @@
           <h1>CONCEPT</h1>
           <p>DIC Coffeeのこだわり</p>
         </div>
-        <p>
-          DIC Coffeeのコーヒーはルワンダ産のコーヒー豆<strong>「DIC Beans」</strong>を使用しています。<br>
-          直接契約したコーヒー農家から仕入れております。<br>
-          バランスの取れた酸味とコクに、フルーティな甘さを感じられる１杯です。ぜひ、こだわりの１杯を
-          お楽しみください。<br>
-          <small>※DIC Cafeは株式会社ダイビックが農場と契約、運営しています。</small>
-        </p>
-        <img src="images/sample_concept.jpg">
+        <div class="section_concept">
+          <p>
+            DIC Coffeeのコーヒーはルワンダ産のコーヒー豆<strong>「DIC Beans」</strong>を使用しています。<br>
+            直接契約したコーヒー農家から仕入れております。<br>
+            バランスの取れた酸味とコクに、フルーティな甘さを感じられる１杯です。ぜひ、こだわりの１杯を
+            お楽しみください。<br>
+            <small>※DIC Cafeは株式会社ダイビックが農場と契約、運営しています。</small>
+          </p>
+          <img src="images/sample_concept.jpg">
+        </div>
       </article>
-      <article class="section_inner">
+      <article class="section_inner menu">
         <h1 class="section_title" id="menu">MENU</h1>
         <section>
           <div class="center">
             <h1 class="menu_title">Recommended menu</h1>
           </div>
-          <ul>
+          <ul class="menu_option">
             <li>
+              <div class="menu_option_description">
               <h2>ブルーベリーパンケーキ</h2>
               <p>フレッシュなブルーベリーをトッピングしたパンケーキです</p>
               <p>¥1,200</p>
+              </div>
               <img src="images/sample_pancake1.jpg">
             </li>
             <li>
+              <div class="menu_option_description">
               <h2>ストロベリーパンケーキ</h2>
               <p>イチゴとはちみつのコラボレーションをお楽しみください</p>
               <p>¥1,300</p>
+              </div>
               <img src="images/sample_pancake2.jpg">
             </li>
           </ul>
@@ -70,25 +76,33 @@
           <div class="center">
             <h1 class="menu_title">Coffee menu</h1>
           </div>
-          <ul>
+          <ul class="cofee_menu_options">
             <li>
-              <h2>ブレンドコーヒー</h2>
-              <p>¥400</p>
+              <div>
+                <h2>ブレンドコーヒー</h2>
+                <p>¥400</p>
+              </div>
               <img src="images/sample_cafe1.jpg" class="caffee_menu_image">
             </li>
             <li>
-              <h2>アートラテ</h2>
-              <p>¥500</p>
+              <div>
+                <h2>アートラテ</h2>
+                <p>¥500</p>
+              </div>
               <img src="images/sample_cafe2.jpg" class="caffee_menu_image">
             </li>
             <li>
-              <h2>カフェラテ</h2>
-              <p>¥450</p>
+              <div>
+                <h2>カフェラテ</h2>
+                <p>¥450</p>
+              </div>
               <img src="images/sample_cafe3.jpg" class="caffee_menu_image">
             </li>
             <li>
-              <h2>アイスコーヒー</h2>
-              <p>¥350</p>
+              <div>
+                <h2>アイスコーヒー</h2>
+                <p>¥350</p>
+              </div>
               <img src="images/sample_cafe4.jpg" class="caffee_menu_image">
             </li>
           </ul>
@@ -130,7 +144,7 @@
           </a>
           <a href="index.html">
             <li>
-              <img src="images/sample_logo_w.png">
+              <img src="images/sample_logo_w.png" class="footer_logo">
             </li>
           </a>
         </ul>
